Ensure white space is shown in table

--- a/html/style.css
+++ b/html/style.css
@@ -212,6 +212,7 @@ td {
     border: 1px solid var(--clr-primary-fg);
     padding: var(--size-xs);
     vertical-align: top;
+    white-space: pre-wrap;
 }
 
 th {
